Compilers construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/009_shadowing_decl_return.xi
f(x:int)
f(x:int) : int

//@PRACOWNIA
//@should_not_typecheck
